--- a/index.html
+++ b/index.html
@@ -269,7 +269,15 @@
                     <a href="homework6/index.html">Homework 6 →</a>
                 </div>
 
-                
+                <div class="homework-item">
+                    <h3>Homework 7 -  </h3>
+                    <a href="homework7/index.html">Homework 7 →</a>
+                </div>
+
+                <div class="homework-item">
+                    <h3>Homework 8 -  </h3>
+                    <a href="homework8/index.html">Homework 8 →</a>
+                </div>
 
             </div>
         </section>
