Fix HTML structure and add missing content

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
                 <div class="homework-item">
                     <h3>Homework 7 -  </h3>
-                    <a href="homework7/index.html">Homework 7 →</a>
+                    <a href="homework7/index.html">Homework 7 Security Random Walk Simulation →</a>
                 </div>
 
                 <div class="homework-item">
@@ -294,4 +294,5 @@
         </div>
     </footer>
 </body>
+
 </html>
