Fix HTML formatting and structure

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                 </div>
 
                 <div class="homework-item">
-                    <h3>Homework 8 -  </h3>
+                    <h3>Homework 8 - Research Task </h3>
                     <a href="homework8/index.html">Homework 8 →</a>
                 </div>
 
@@ -296,3 +296,4 @@
 </body>
 
 </html>
+
