Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -270,8 +270,8 @@
                 </div>
 
                 <div class="homework-item">
-                    <h3>Homework 7 -  </h3>
-                    <a href="homework7/index.html">Homework 7 Security Random Walk Simulation →</a>
+                    <h3>Homework 7 - Security Random Walk Simulation </h3>
+                    <a href="homework7/index.html">Homework 7 →</a>
                 </div>
 
                 <div class="homework-item">
@@ -296,4 +296,5 @@
 </body>
 
 </html>
+
 
