--- a/index.html
+++ b/index.html
@@ -270,13 +270,23 @@
                 </div>
 
                 <div class="homework-item">
-                    <h3>Homework 7 - Security Random Walk Simulation </h3>
+                    <h3>Homework 7 -  </h3>
                     <a href="homework7/index.html">Homework 7 →</a>
                 </div>
 
                 <div class="homework-item">
-                    <h3>Homework 8 - Research Task </h3>
+                    <h3>Homework 8 -  </h3>
                     <a href="homework8/index.html">Homework 8 →</a>
+                </div>
+
+                <div class="homework-item">
+                    <h3>Homework 9 -  </h3>
+                    <a href="homework9/index.html">Homework 9 →</a>
+                </div>
+
+                <div class="homework-item">
+                    <h3>Homework 10 -  </h3>
+                    <a href="homework10/index.html">Homework 10 →</a>
                 </div>
 
             </div>
@@ -294,7 +304,4 @@
         </div>
     </footer>
 </body>
-
 </html>
-
-
