--- a/index.html
+++ b/index.html
@@ -289,7 +289,12 @@
                     <a href="homework10/index.html">Homework 10 →</a>
                 </div>
 
+                 <div class="homework-item">
+                    <h3>Homework 11 -  </h3>
+                    <a href="homework11/index.html">Homework 11 →</a>
+                </div>
             </div>
+            
         </section>
     </main>
 
@@ -306,3 +311,4 @@
 </body>
 
 </html>
+
