--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 </div>
 
                 <div class="homework-item">
-                    <h3>Homework 10 -  </h3>
+                    <h3>Homework 10 - Stocastic process with continuous time </h3>
                     <a href="homework10/index.html">Homework 10 →</a>
                 </div>
 
@@ -311,4 +311,5 @@
 </body>
 
 </html>
+
 
