Fix HTML structure and update homework section

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
                 </div>
 
                  <div class="homework-item">
-                    <h3>Homework 11 -  </h3>
+                    <h3>Homework 11 - Simulating Wiener Processes and SDEs with Euler-Maruyama Method </h3>
                     <a href="homework11/index.html">Homework 11 →</a>
                 </div>
             </div>
@@ -311,5 +311,6 @@
 </body>
 
 </html>
+
 
 
